trip model and tripRepository (#23)
* trip model and tripRepository

* TripService tripRepository tripController

* all endpoints

* patch and update fixed

* formatted
