# api/src/main/resources/webroot/api.yaml
@@ -265,6 +265,81 @@ Non-admin user can only patch themselves. Admin can patch anyone."
                 $ref: '#/components/schemas/NewComment'
         "400":
           description: Bad request
+  /trips:
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - trips
+      summary: Get current user all trips
+      description: Shows all trips created by user.
+      operationId: getTrips
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Trips"
+        "400":
+          description: Bad request
+  /trip/{tripId}:
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - trip
+      summary: Get current user trip
+      description: Shows only one trip with provided tripId created by user.
+      operationId: getTrip
+      parameters:
+          - name: ticketId
+            in: path
+            description: ticket id
+            required: true
+            schema:
+              type: integer
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/trip'
+        "400":
+          description: Bad request
+    patch:
+      tags:
+        - trip
+        summary: patches trip
+        description: "patches trip that was created by user provided by user(guide)"
+        operationId: update
+        - responses:
+          "200":
+            description: OK
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/PatchTrip"
+          "400":
+            description: Bad request
+  /trip:
+    post:
+      tags:
+        - trip
+        summary: create new trip
+        description: "create new trip with informations provided by user(guide)"
+        operationId: createTrip
+        - responses:
+            "200":
+              description: OK
+              content:
+                application/json:
+                  schema:
+                    $ref: "#/components/schemas/NewTrip"
+            "400":
+              description: Bad request
+
 servers:
   - url: http://149.156.146.249:60001/api
 components:
